--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 </head>
 <body>
-<h1>heading one</h1>
+<h1>heading one.............</h1>
 <h1>Another heading ...............</h1>   
 </body>
 </html>
